<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableLayout
        android:id="@+id/ll_attr_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TableRow>
            <net.swimmi.linya.ui.view.combine.LabelText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:label="@string/partner_attr_hp"
                app:text="3000"
                app:appendText="+3000" />
            <net.swimmi.linya.ui.view.combine.LabelText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:label="@string/partner_attr_mp"
                app:text="3000"
                app:appendText="+3000" />
        </TableRow>
        <TableRow>
            <net.swimmi.linya.ui.view.combine.LabelText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:label="@string/partner_attr_atk"
                app:text="3000"
                app:appendText="+3000" />
            <net.swimmi.linya.ui.view.combine.LabelText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:label="@string/partner_attr_def"
                app:text="3000"
                app:appendText="+3000" />
        </TableRow>
        <TableRow>
            <net.swimmi.linya.ui.view.combine.LabelText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:label="@string/partner_attr_crt"
                app:text="3000"
                app:appendText="+3000" />
            <net.swimmi.linya.ui.view.combine.LabelText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:label="@string/partner_attr_tna"
                app:text="3000"
                app:appendText="+3000" />
        </TableRow>
        <TableRow>
            <net.swimmi.linya.ui.view.combine.LabelText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:label="@string/partner_attr_hit"
                app:text="3000"
                app:appendText="+3000" />
            <net.swimmi.linya.ui.view.combine.LabelText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:label="@string/partner_attr_dge"
                app:text="3000"
                app:appendText="+3000" />
        </TableRow>
        <TableRow>
            <net.swimmi.linya.ui.view.combine.LabelText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:label="@string/partner_attr_blk"
                app:text="3000"
                app:appendText="+3000" />
            <net.swimmi.linya.ui.view.combine.LabelText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:label="@string/partner_attr_brk"
                app:text="3000"
                app:appendText="+3000" />
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>