<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ActPack"
    android:id="@+id/container"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/colorScene">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_panel">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_margin="4dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_partner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/backpack"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:background="@drawable/bg_card"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_item_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="" />

        <net.swimmi.linya.ui.view.combine.PrimaryButton
            android:id="@+id/pb_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:isPrimary="false"
            android:clickable="true"
            android:focusable="true"
            app:text="@string/use" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:background="@drawable/bg_card"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="2dp">

            <LinearLayout
                android:id="@+id/ll_action"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="4dp">

                <GridView
                    android:id="@+id/gv_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:numColumns="5"
                    android:stretchMode="columnWidth">

                </GridView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_partner_tab"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tab_height"
                android:orientation="horizontal">

                <net.swimmi.linya.ui.view.combine.PanelTab
                    android:id="@+id/pt_all"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:name="@string/all" />

                <net.swimmi.linya.ui.view.combine.PanelTab
                    android:id="@+id/pt_material"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:name="@string/backpack_material" />

                <net.swimmi.linya.ui.view.combine.PanelTab
                    android:id="@+id/pt_partner"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:name="@string/partner" />

                <net.swimmi.linya.ui.view.combine.PanelTab
                    android:id="@+id/pt_magic"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:name="@string/magic" />

                <net.swimmi.linya.ui.view.combine.PanelTab
                    android:id="@+id/pt_supply"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:name="@string/backpack_supply" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>