<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    tools:context=".ui.activity.ActPartner"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/colorScene">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_panel">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_margin="4dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_partner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="玩家"
            android:textColor="@color/colorAccent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_partner_square" />

    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_card">

        <include layout="@layout/partner_info" />

    </android.support.constraint.ConstraintLayout>


    <LinearLayout
        android:id="@+id/ll_center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:background="@drawable/bg_card"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="2dp">

            <LinearLayout
                android:id="@+id/ll_action"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="4dp">

                <include layout="@layout/partner_attr" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_partner_tab"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tab_height"
                android:orientation="horizontal">

                <net.swimmi.linya.ui.view.combine.PanelTab
                    android:id="@+id/pt_role"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:name="@string/partner_attr" />

                <net.swimmi.linya.ui.view.combine.PanelTab
                    android:id="@+id/pt_skill"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:name="@string/partner_skill" />

                <net.swimmi.linya.ui.view.combine.PanelTab
                    android:id="@+id/pt_talent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:name="@string/partner_talent" />

                <net.swimmi.linya.ui.view.combine.PanelTab
                    android:id="@+id/pt_soul"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:name="@string/partner_soul" />

                <net.swimmi.linya.ui.view.combine.PanelTab
                    android:id="@+id/pt_stone"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:name="@string/partner_stone" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_card"
        android:orientation="horizontal">

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/ll_my_partner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

        </HorizontalScrollView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:elevation="4dp">

            <TextView
                android:id="@+id/tv_catalog"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_margin="4dp"
                android:background="@drawable/bg_panel"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:text="@string/catalog" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>